test: AuthIntegrationTest 통합 테스트 코드에서 사용하는 testcontainer annotation 방식으로 개선 및 MYSQL 컨테이너만 사용하도록 개선